 * formula AI:
   * Added variant_iterator to iterate over variant elements
   * Modified choose, filter, find and map functions to use variant_iterator, 
     so they work correctly with a variant_map type
 * language and i18n:
   * new translation: Latvian
   * updated translations: Arabic, Finnish, French, German, Greek, Lithuanian,
     Serbian
 * WML engine:
   * When examining stored units, now the attacks, max_hitpoints, max_moves,
     and max_experience are the "real" values and can also be modified.
   * max_attacks in [unit] now also works for values bigger than 1
   * the "zoc" key works for [unit_type] too, and for [unit] accepts other
     boolean values than 1 and 0 (bug #11889).
   * new effect apply_to=type to transform the unit to a different type
 * GUI improvements:
   * Rewrote the textbox history saving of the new widget library. This rewrite
     is incompatible with the old version, but since the library is still in
     development, no compatibility layer has been added.
   * Added gui to choose where server binary is
   * Added type-a-head search to file chooser dialog
 * multiplayer:
   * Added support for multiple sides per client in MP start
   * Added support for reserving slots when reloading game
   * Fixed timer end warning not to play in opponents turn (bug: #11517)
   * Teams are now translated localy for all clients (bug: #3676)
 * miscellaneous and bug fixes:
   * Fixed droiding not to make wesnoth think player is observer (bug: #9675)
   * Fixed statitics not add turn data from previus scenarios (bug: #11719)
   * Fixed manager to initialize before gamestate in playcontroller (bug: 11935)
   * Removed persistance from team configuration (bug: #10916)
   * Fixed text parser again strip cr from configs. Added CR and 254 to be
     escaped in campaign upload. All UMC has to be reuploaded to server
   * Made automaticaly generated macro reference easier to naviagate and link to
     (patch: #1076)