@@ -1,4 +1,5 @@
 [locale]
 	name="Български (Bulgarski)"
+	sort_name = "Bulgarski"
 	locale=bg_BG
 [/locale]
