@@ -1,4 +1,5 @@
 [locale]
 	name="Ελληνικά (Ellinika)"
+	sort_name = "Ellinika"
 	locale=el_GR
 [/locale]
