@@ -1,5 +1,6 @@
 [locale]
 	name="עברית (Hebrew)"
+	sort_name = "Hebrew"
 	locale=he_IL
 	dir=rtl
 [/locale]
