@@ -1,4 +1,5 @@
 [locale]
 	name="日本語 (Nihongo)"
+	sort_name = "Nihongo"
 	locale=ja_JP
 [/locale]
