@@ -1,4 +1,5 @@
 [locale]
-        name="한국어 (Korean)"
-        locale=ko_KR
+	name="한국어 (Korean)"
+	sort_name = "Korean"
+	locale=ko_KR
 [/locale]
