@@ -1,4 +1,5 @@
 [locale]
 	name="Македонски (Makedonski)"
+	sort_name = "Makedonski"
 	locale=mk_MK
 [/locale]
