@@ -1,4 +1,4 @@
 [locale]
-name="Norsk bokmål"
-locale=nb_NO
+	name="Norsk bokmål"
+	locale=nb_NO
 [/locale]
