@@ -1,4 +1,5 @@
 [locale]
 	name="Русский (Russkij)"
+	sort_name = "Russkij"
 	locale=ru_RU
 [/locale]
