@@ -1,4 +1,4 @@
 [locale]
-        name="Filipino"
-        locale=tl_PH
+	name="Filipino"
+	locale=tl_PH
 [/locale]
