@@ -1,4 +1,5 @@
 [locale]
 	name="中文 (Zhongwen)"
+	sort_name = "Zhongwen"
 	locale=zh_CN
 [/locale]
