@@ -1,4 +1,5 @@
 [locale]
 	name="繁體中文(Chinese traditional)"
+	sort_name = "Chinese traditional"
 	locale=zh_TW
 [/locale]
