@@ -10,6 +10,8 @@ Version 1.5.1+svn:
    * new translation: Latvian
    * updated translations: Arabic, Finnish, French, German, Greek, Lithuanian,
      Serbian
+   * languages in the language selection are now sorted on name instead of
+     code.
  * WML engine:
    * When examining stored units, now the attacks, max_hitpoints, max_moves,
      and max_experience are the "real" values and can also be modified.
